// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <form>
    <div
      class="ui placeholder piled segment"
    >
      <div
        class="ui icon header mb-0"
      >
        <i
          aria-hidden="true"
          class="file outline icon"
        />
        Drag and drop Files here
        <br />
        <small>
          or
        </small>
      </div>
      <br />
      <label
        class="ui icon primary left labeled button"
        for="file"
        role="button"
      >
        <i
          aria-hidden="true"
          class="file outline icon"
        />
        Choose a file
      </label>
      <input
        hidden=""
        id="file"
        multiple=""
        type="file"
      />
    </div>
  </form>
</div>
`;

exports[`renders errors 1`] = `
<div>
  <form>
    <div
      class="ui placeholder piled segment"
    >
      <div
        class="ui icon header mb-0"
      >
        <i
          aria-hidden="true"
          class="file outline icon"
        />
        Drag and drop Files here
        <br />
        <small>
          or
        </small>
      </div>
      <br />
      <label
        class="ui icon primary left labeled button"
        for="file"
        role="button"
      >
        <i
          aria-hidden="true"
          class="file outline icon"
        />
        Choose a file
      </label>
      <input
        hidden=""
        id="file"
        multiple=""
        type="file"
      />
      <div
        class="ui icon negative message"
      >
        <i
          aria-hidden="true"
          class="warning circle icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Failed to upload:
          </div>
          <p>
            [object Object]
          </p>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`renders instructions 1`] = `
<div>
  <form>
    <div
      class="ui placeholder piled segment"
    >
      <div
        class="ui icon header mb-0"
      >
        <i
          aria-hidden="true"
          class="file outline icon"
        />
        Drag files here
        <br />
        <small>
          or
        </small>
      </div>
      <br />
      <label
        class="ui icon primary left labeled button"
        for="file"
        role="button"
      >
        <i
          aria-hidden="true"
          class="file outline icon"
        />
        Choose a file
      </label>
      <input
        hidden=""
        id="file"
        multiple=""
        type="file"
      />
    </div>
  </form>
</div>
`;
